k8s/jardin-argo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: argo-nginx
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-conf-argo
          mountPath: "/etc/nginx/conf.d"
          readOnly: false
      volumes:
      - name: nginx-conf-argo
        configMap:
          name: nginx-conf-argo
