k8s/jardin-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jardin-back
  name: jardin-back
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jardin-back
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jardin-back
    spec:
      containers:
      - image: anonymeio/jardin-back:0.0.1
        name: jardin-back
        command: ["/bin/sh", "-c", "npm run serve"]
        resources: {}
status: {}
