k8s/jardin-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-preprod
  name: nginx-preprod
  namespace: preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-preprod
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-preprod
    spec:
      containers:
      - image: nginx
        name: nginx
      #   volumeMounts:
      #   - name: nginx-conf-preprod
      #     mountPath: "/etc/nginx/conf.d"
      #     readOnly: false
      # volumes:
      # - name: nginx-conf-preprod
      #   configMap:
      #     name: nginx-conf-preprod
