k8s/jardin-back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jardin-back-preprod
  name: jardin-svc-preprod
  namespace: preprod
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: jardin-back-preprod
  type: NodePort
status:
  loadBalancer: {}
