k8s/beta.anonyme.io.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: preprod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    
spec:
  # tls:
  # - hosts:
  #   - beta.anonyme.io
  #   secretName: beta-tls
  rules:
  - host: frontend.104.198.30.205.nip.io
    http:
      paths:
      - backend:
          serviceName: jardin-svc-preprod
          servicePort: 3000
        path: /api
      - backend:
          serviceName: nginx-svc-preprod
          servicePort: 80
        path: /beta
