k8s/jardin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - beta.anonyme.io
    secretName: beta-tls
  rules:
  
  - host: beta.anonyme.io 
    http:
      paths:
      - backend:
          serviceName: jardin-svc
          servicePort: 3000
        path: /api
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
